# splain

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: mirror.yml  release.yml
src/: main.cpp
